samples/_failures_safe/1761319732_379042_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_460ad33f.c: In function ‘main’:
./samples/SAFE/__tmp_460ad33f.c:142:5: error: expected declaration or statement at end of input
  142 |     printf("Generating %d sample log entries...\n", log_count);
      |     ^~~~~~
